--- a/frontend/src/pages/NotFound/notfound.css
+++ b/frontend/src/pages/NotFound/notfound.css
@@ -1,4 +1,4 @@
-.not-found-container{
+/* .not-found-container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,4 +37,4 @@
     background: #00bfff;
     color: #0d1b2a;
     box-shadow: 0 0 15px #00bfff, 0 0 30px #00bfff, 0 0 60px #00bfff;
-}
+} */
